# LifeIsLearning

./: .gitignore  README.md
generalCoding/: learningLinks.txt
generalCoding/cFunctionTemplates/00_stringManipulations/: 00_letterASCIIManipulation.c
generalCoding/scripts/: rundocker_sysprog.sh  venv_install.sh
generalLearning/gitLearning/: gitConfigHelpers.txt
generalLearning/sqlLearning/: dwh_dba_usr_creation.txt  sql_summary_oracletutorial.txt
generalLearning/sqlLearning/001_LiveSQL_DataGen/RandomTable_Gen/: 01GeneratingTable.py  ExampleTable100.txt
gitLearning/: gitCommands.txt  gitSSH.txt
leetCode/: TODO.txt
leetCode/dailyProblems/20-06-2025/: 02_manhattanBugInBetterment.c
leetCode/dailyProblems/xx-06-2025/20-06-2025/: 01_manhattanWithoutBetterment.c  03_manhattanBeforeRevert.c  04_manhattanFinal.c
leetCode/dailyProblems/xx-06-2025/21-06-2025/: 01_minDeletionsTimeLimitExceeded.c  02_minDeletionsGreedyWorks.c
leetCode/dailyProblems/xx-06-2025/22-06-2025/: divideStringEasyCpp.cpp  divideStringFinishedC.c  divideStringMemoryProblemC.c
leetCode/dailyProblems/xx-06-2025/23-06-2025/: 01_sumOfKMirrorNumbers_LongLongOverflow.cpp  02_sumOfKMirrorNumbers_MemoryLimitExceeded.cpp  03_sumOfKMirrorNumbers_TimeLimitExceeded.cpp  04_sumOfKMirrorNumbers2_TimeLimitExceeded.cpp  05_sumOfKMirrorNumbers2_FINISHED_possibleImprovements.cpp
leetCode/dailyProblems/xx-06-2025/24-06-2025/: 01_allKDistantIndices_sizeTIntIssues.c  02_allKDistantIndices_TimeLimitExceeded.c  03_allKDistantIndices_FinishedVeryEfficient.c
leetCode/dailyProblems/xx-06-2025/25-06-2025/: 01_kthSmallestProduct_quicksortDone.c  02_kthSmallestProduct_binarySearchHalf.c  03_02_kthSmallestProduct_binarySearchFinished.c
leetCode/dailyProblems/xx-06-2025/26-06-2025/: 01_longestBinSubseqLeqK_Efficient.c
leetCode/dailyProblems/xx-06-2025/29-06-2025/: 01_numberSubseqFulfillingCondition_MemoryLimitExceeded.cpp
leetCode/weeklyContest/preparation/: 01-01_GenerateTagForVideoCaption.c
projects/games/tree-huggers-main/: .gitignore  CMakeLists.txt  GAMERULES.md  README.md
projects/games/tree-huggers-main/lib/common/: CMakeLists.txt  cell.cpp  cell.h  game_state.cpp  game_state.h  player.cpp  player.h
projects/games/tree-huggers-main/lib/common/exceptions/: EcologgicalException.h
projects/games/tree-huggers-main/lib/common/network/requests/: buy_truck_request.cpp  client_request.cpp  client_request.h  end_phase_request.cpp  end_phase_request.h  place_road_request.h  place_truck_request.cpp  remove_truck_request.cpp  server_connect_request.cpp  server_connect_request.h  start_game_request.cpp
projects/games/tree-huggers-main/lib/common/network/responses/: full_state_response.cpp  full_state_response.h  request_response.cpp  request_response.h  server_response.h
projects/games/tree-huggers-main/lib/common/serialization/: json_utils.h  serializable_value.h  unique_serializable.cpp  unique_serializable.h
projects/games/tree-huggers-main/src/client/app/: Ecologgical.h
projects/games/tree-huggers-main/src/client/end_screen_panel/: EndScreenPanel.h
projects/games/tree-huggers-main/src/client/game_start_dialog/: GameStartDialog.h
projects/games/tree-huggers-main/src/client/game_window/: GameWindow.h
projects/games/tree-huggers-main/src/client/input_field/: InputField.cpp
projects/games/tree-huggers-main/src/client/lobby_screen_panel/: LobbyScreenPanel.cpp  LobbyScreenPanel.h
projects/games/tree-huggers-main/src/client/main_game_panel/: GridPanel.cpp  GridPanel.h  InfoPanel.cpp  InfoPanel.h  MainGamePanel.cpp
projects/games/tree-huggers-main/src/client/main_game_panel/truck_dialog/: TruckDialog.h
projects/games/tree-huggers-main/src/client/network/: ResponseListenerThread.cpp
projects/games/tree-huggers-main/src/server/: game_instance.cpp  game_instance_manager.cpp  main.cpp  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h
projects/games/tree-huggers-main/tests/unit/googletest/: CMakeLists.txt
projects/games/tree-huggers-main/tests/unit/googletest/client/: CMakeLists.txt  client_test.cpp
projects/games/tree-huggers-main/tests/unit/googletest/common/: CMakeLists.txt  cell_test.cpp  game_state_test.cpp
projects/games/tree-huggers-main/tests/unit/googletest/server/: CMakeLists.txt
sqlLearning/: sql_summary_oracletutorial.txt
sqlLearning/001_LiveSQL_DataGen/RandomTable_Gen/: ExampleTable10000.txt  TableRandomGenDefault.txt  Table_RandomGen_01.txt
tree-huggers-main/build_scripts/: build_project.py
tree-huggers-main/lib/common/: main.cpp
tree-huggers-main/lib/common/network/requests/: buy_truck_request.h  place_road_request.cpp  place_truck_request.h  remove_truck_request.h  start_game_request.h
tree-huggers-main/lib/common/network/responses/: server_response.cpp
tree-huggers-main/lib/common/serialization/: serializable.h
tree-huggers-main/src/client/: CMakeLists.txt  GameController.cpp  GameController.h  main.cpp
tree-huggers-main/src/client/app/: Ecologgical.cpp
tree-huggers-main/src/client/connection_panel/: ConnectionPanel.cpp  ConnectionPanel.h
tree-huggers-main/src/client/end_screen_panel/: EndScreenPanel.cpp
tree-huggers-main/src/client/game_start_dialog/: GameStartDialog.cpp
tree-huggers-main/src/client/game_window/: GameWindow.cpp
tree-huggers-main/src/client/input_field/: InputField.h
tree-huggers-main/src/client/main_game_panel/: MainGamePanel.h
tree-huggers-main/src/client/main_game_panel/truck_dialog/: TruckDialog.cpp
tree-huggers-main/src/client/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ResponseListenerThread.h
tree-huggers-main/src/client/truck_shop/: TruckShop.cpp  TruckShop.h
tree-huggers-main/src/server/: CMakeLists.txt  game_instance.h  game_instance_manager.h  server_network_manager.cpp  server_network_manager.h
tree-huggers-main/tests/unit/googletest/client/: gui_test.cpp
tree-huggers-main/tests/unit/googletest/common/: player_test.cpp
tree-huggers-main/tests/unit/googletest/server/: game_instance.cpp
